add categories section on front-end, start login page, add categories api + update swagger file
