# backend/routes/categories.js
@@ -1,0 +1,7 @@
+const { getCategories } = require("../controllers/categories");
+
+const router = require("express").Router();
+
+router.get("/", getCategories);
+
+module.exports = router;
